apps/taskfarm/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskfarm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskfarm-app
  template:
    metadata:
      labels:
        app: taskfarm-app
    spec:
      serviceAccountName: taskfarm-app-sa
      containers:
        - name: taskfarm-app
          image: taskfarm-app-img
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
