apps/taskfarm/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskfarm-service
  labels:
    app: taskfarm-app
spec:
  type: ClusterIP
  selector:
    app: taskfarm-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
